my-style.css
:root {
	--background-color: #d3c4b8;
    --text-color: #1a1a1a;
    --title-color: #7e0dc0;
	--link-color: #0ead69;
	--link-hover-color: #d18732;
}

html, body {
	background-color: var(--background-color);
	color: var(--text-color);
	font-family: 'Open Sans', sans-serif;
	font-size: 16px;
	font-weight: 400;
	padding-top: 80px;
	overflow-x: hidden;
}

a:focus {
	color:var(--link-hover-color);
	outline: none;
	text-decoration: none; 
}

a {
    color: var(--link-color); 
    text-decoration: none; 
}

a:hover {
    text-decoration: none; 
	color: var(--link-hover-color);
}


.paper_title {
    font-size: 1em; 
    font-weight: 600; 
    color: var(--title-color); 
    line-height: 1.4; 
}


.section-block {
    margin-top: 1.5em;
}

ul.clean-list {
    margin: 0;
    padding-left: 1.2em;
    list-style-position: outside;
}



.cm-sidebar {
	position: fixed;
	width: 290px;
}

.cm-main-nav {
	background-color: white;
	font-size: 1.1em;
	letter-spacing: .5px;
	padding-top: 15px;
	padding-bottom: 10px;
	text-align: center;
}

.cm-nav-item {
	list-style: none;
	width: 100%;
	padding: 15px 30px;
}

.cm-nav-item-link{
	border: 1px solid rgba(0,0,0,0);
	color: var(--text-color);
	display: block;
	padding: 10px;
	width: 100%;
	-webkit-transition: all 0.3s ease;
	transition: all 0.3s ease;
}

.cm-nav-item-link.active,
.cm-nav-item-link:hover {
	color: var(--text-color);
	text-decoration: none;
	border: 1px solid #999;
}

.cm-nav-item-link:focus { text-decoration: none; }

.cm-banner-title, 
.cm-section-title, 
.cm-banner-text {
	color: var(--text-color);
	margin-top: 20px;
}

.cm-section-title {	margin-bottom: 20px; }

.cm-section-title-box {	margin-bottom: 0; }

.cm-banner-title { 
	font-size: 2em;
}

.cm-main-content {
	margin-left: 300px;
	padding-left: 20px;
}

.cm-content-box {
	background-color: white;
	margin-bottom: 30px;
}

.pad { padding: 30px; }

.cm-banner {
	height: 370px;
	padding: 30px;
}
	
.cm-banner-inner {
	height: 100%;
	text-align: left;
	display: -webkit-box;
	display: -webkit-flex;
	display: -ms-flexbox;
	display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
        -ms-flex-direction: column;
            flex-direction: column;
    -webkit-box-align: left;
    -webkit-align-items: left;
        -ms-flex-align: left;
            align-items: left;
    -webkit-box-pack: left;
    -webkit-justify-content: left;
        -ms-flex-pack: left;
            justify-content: left;
}
	

.cm-banner-text { font-size: 1em; }


.section-description {
	line-height: 1.8;
	margin-bottom: 25px;
	font-size: 1em;
}

.section-description:last-child { margin-bottom: 15px; }


.cm-footer {
	color: #424141;
	padding-bottom: 15px;
	font-size: .85em;
}


@media (min-width: 1200px){
	.container { max-width: 1190px; }
}

@media screen and (max-width: 1199px) and (min-width: 1140px) {
	.container { width: 1080px; }
	.cm-sidebar { width: 300px; }
	.cm-main-content { margin-left: 300px; }
}

/*http://stackoverflow.com/questions/11404744/media-queries-max-width-or-max-height*/
@media screen and (max-width: 1139px), screen and (max-height: 834px) {

	body {	padding-top: 100px;	}

	.cm-sidebar {
        width: 100%; 
        height: auto;
        position: relative; 
        display: flex;
        flex-direction: column; 
        align-items: center;
    }

	.cm-sidebar-image {
		max-width: 40%;
		margin: 10px auto; 
		display: block;
	}

    .cm-main-nav {
        width: 100%; 
        text-align: center;
    }

    .cm-nav-item {
        width: 100%; 
        padding: 10px 0; 
    }

    .cm-nav-item-link {
        width: 100%; 
        text-align: center;
    }

	.cm-main-content {
		margin-left: auto;
		margin-right: auto;
		max-width: 750px;
		padding-left: 0;
	}

	.cm-content-box { margin-left: 0; }
}


@media screen and (max-width: 991px) and (min-width: 780px) {
	.container { width: 780px; }	
}

@media screen and (max-width: 640px) {
	body { padding-top: 30px; }
	
	.cm-sidebar {
        width: 100%; 
        height: auto;
        position: relative; 
        display: flex;
        flex-direction: column; 
        align-items: center;
    }

	.cm-sidebar-image {
		max-width: 40%;
		margin: 10px auto; 
		display: block;
	}

    .cm-main-nav {
        width: 100%; 
        text-align: center;
    }

    .cm-nav-item {
        width: 100%; 
        padding: 10px 0; 
    }

    .cm-nav-item-link {
        width: 100%;
        text-align: center;
    }

	
}

